--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="">TECHNO</a>
+                <a class="navbar-brand" href="/Home.html">TECHNO</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
@@ -87,7 +87,7 @@
                     {%endif%}
 
                     {%else%}
-                    <li><a href="/Registertion.html">Registertion</a></li>
+                    <li><a href="/Registertion.html">Registration</a></li>
                     <li><a href="Login.html">Login</a></li>
 
                     {%endif%}
